Fix logo to align center on mobile screen

--- a/source/scss/_partial/highlight.scss
+++ b/source/scss/_partial/highlight.scss
@@ -15,6 +15,7 @@ pre {
     table, tr, td {
         width: 100%;
         border-collapse: collapse;
+        border:  0;
         padding: 0;
         margin: 0;
     }
