--- a/source/scss/_partial/mq.scss
+++ b/source/scss/_partial/mq.scss
@@ -18,7 +18,7 @@ main.container {
     }
     header {
         padding: 20px 0;
-        a.logo-link,
+        .branding,
         ul.nav.nav-list {
             float: none;
             display: block;
